--- a/BeerMeUp/WebContent/index.html
+++ b/BeerMeUp/WebContent/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+  <meta charset="UTF-8">
+  <title>BeerMeUp</title>
 </head>
 <body>
-
+  <h1>BeerMeUp</h1>
 </body>
 </html>
