--- a/BeerMeUp/WebContent/index.html
+++ b/BeerMeUp/WebContent/index.html
@@ -5,6 +5,6 @@
   <title>BeerMeUp</title>
 </head>
 <body>
-  <h1 align="left" >BeerMeUp</h1>
+  <h1 align="left" >BeerMeUp</h1> <!--  Giulio commento -->
 </body>
 </html>
